<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.lebs.lublin.repaircarauction.LoginActivity"
    tools:layout_editor_absoluteY="25dp">

    <TextView
        android:id="@+id/title1"
        android:layout_width="213dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="37dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="23dp"
        android:text="@string/szukasz"
        android:textAlignment="center"
        android:textSize="46sp"
        app:layout_constraintBottom_toTopOf="@+id/title2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="44dp"
        android:text="@string/pomocy_czy_klienty"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/usernameLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title1" />

    <EditText
        android:id="@+id/usernameLogin"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginBottom="1dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/passLabel"
        app:layout_constraintStart_toStartOf="@+id/passwordLogIn"
        app:layout_constraintTop_toBottomOf="@+id/usernameLabel" />

    <EditText
        android:id="@+id/passwordLogIn"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginBottom="9dp"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/logIn"
        app:layout_constraintEnd_toEndOf="@+id/logIn"
        app:layout_constraintTop_toBottomOf="@+id/passLabel" />

    <TextView
        android:id="@+id/usernameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:text="@string/email"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/usernameLogin"
        app:layout_constraintStart_toStartOf="@+id/passLabel"
        app:layout_constraintTop_toBottomOf="@+id/title2" />

    <TextView
        android:id="@+id/passLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="1dp"
        android:text="@string/has_o"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/passwordLogIn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usernameLogin" />

    <Button
        android:id="@+id/logIn"
        android:layout_width="216dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="7dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/zaloguj_si"
        app:layout_constraintBottom_toTopOf="@+id/singUp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordLogIn" />

    <Button
        android:id="@+id/singUp"
        android:layout_width="217dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="120dp"
        android:background="@color/colorPrimary"
        android:text="@string/utworz_konto"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logIn" />
</android.support.constraint.ConstraintLayout>
